bug fixed on iOS video playback

--- a/frontend/src/components/post-item/post-item.css
+++ b/frontend/src/components/post-item/post-item.css
@@ -1,3 +1,8 @@
+.svg-icon circle {
+  stroke: black;
+  stroke-width: 1;
+}
+
 .post-item-container {
   display: flex;
   flex-direction: column;
